<resources>
    <!--  General Usage  -->
    <string name="app_name">Lavilo</string>
    <string name="action_add">Tambahkan</string>
    <string name="action_check_order">Lihat Pesanan</string>
    <string name="dialog_dish_quantity_text">1</string>
    <string name="action_delete">hapus</string>
    <string name="action_make_order">pesan sekarang</string>
    <string name="action_print_bill_receipt">cetak resi pembayaran</string>
    <string name="action_pay_now">bayar sekarang</string>
    <string name="action_update">perbarui</string>
    <string name="action_upload">upload</string>
    <string name="image_delete">gambar hapus</string>
    <string name="image_decrease_amount">gambar minus pada kuantitas</string>
    <string name="image_increase_amount">gambar plus pada kuantitas</string>
    <string name="text_zero_amount">0</string>

    <!--  ****************************************  -->

    <!--  Activity Usage  -->

    <!--  Main Activity  -->
    <string name="title_activity_main">MainActivity</string>

    <!--  ****************************************  -->

    <!--  Fragment Usage  -->

    <!-- Add Dish  -->
    <string name="add_dish_name_hint">Nama hidangan</string>
    <string name="add_dish_price_hint">Harga hidangan</string>
    <string name="add_dish_menu_image">gambar tambah hidangan</string>
    <string name="add_dish_thumbnail_image">thumbnail untuk tambah hidangan</string>
    <string name="add_dish_directory_text"><u> Upload gambar </u></string>
    <string name="add_dish_food_radio_button_text">Makanan</string>
    <string name="add_dish_drink_radio_button_text">Minuman</string>
    <string name="add_dish_menu_title">Tambah Hidangan</string>
    <string name="add_dish_stock_title">Kuantitas:</string>
    <string name="add_dish_type_title">Jenis Hidangan:</string>

    <!--  Add Employee  -->
    <string name="add_employee_background_image">gambar background pada tambah karyawan</string>
    <string name="add_employee_menu_image">gambar menu tambah karyawan</string>
    <string name="add_employee_email_title">Email</string>
    <string name="add_employee_menu_title">Tambah Admin</string>
    <string name="add_employee_name_title">Nama</string>
    <string name="add_employee_password_title">Password</string>
    <string name="add_employee_salary_title">Gaji</string>
    <string name="add_employee_type_title">Jenis Karyawan</string>

    <string-array name="array_employee_types">
        <item>Waiter</item>
        <item>Chef</item>
        <item>Head Chef</item>
        <item>Hall Manager</item>
        <item>Admin</item>
    </string-array>

    <!--  Add Table  -->
    <string name="add_table_background_image">gambar background pada tambah meja</string>
    <string name="add_table_menu_image">gambar menu tambah meja</string>
    <string name="add_table_decrease_capacity_image">gambar minus pada kapasitas meja</string>
    <string name="add_table_increase_capacity_image">gambar_plus_pada_kapasitas_meja</string>
    <string name="add_table_menu_title">Tambah Meja</string>
    <string name="add_table_number_title">Nomor Meja</string>
    <string name="add_table_capacity_title">Kapasitas (orang)</string>

    <!--  Admin  -->
    <string name="action_login">login</string>
    <string name="admin_password_hint">Password</string>
    <string name="admin_email_hint">Email</string>
    <string name="admin_email_image">Image for admin email</string>
    <string name="admin_password_image">Image for admin password</string>
    <string name="admin_email_text">admin@gmail.com</string>
    <string name="admin_login_admin_text">Login Admin</string>
    <string name="admin_password_text">123456</string>

    <!--  Cart  -->
    <string name="cart_quantity_text">%1$sx</string>
    <string name="cart_bill_title">Total Harga:</string>
    <string name="cart_table_number_title">Pilih nomor meja:</string>

    <!--  Dish  -->
    <string name="dish_item_add_action">tambah</string>
    <string name="dish_dialog_title">Jumlah Porsi</string>
    <string name="dish_item_stock_title">Stok: </string>
    <string name="image_dish_item_thumbnail">food\'s thumbnail</string>

    <!--  Management  -->
    <string name="management_add_dish_image">gambar tambah hindangan pada manajemen</string>
    <string name="management_add_table_image">gambar tambah meja pada manajemen admin</string>
    <string name="management_add_employee_image">gambar tambah karyawan pada manajemen admin</string>
    <string name="management_check_dish_image">gambar lihat hidangan pada manajemen</string>
    <string name="management_check_report_image">gambar untuk check report</string>
    <string name="management_add_dish_text">Hidangan</string>
    <string name="management_add_employee_text">Admin</string>
    <string name="management_add_table_text">Meja</string>
    <string name="management_check_dish_text">Menu untuk memperbarui atau menghapus stok</string>
    <string name="management_check_report_text">Riwayat semua pesanan yang telah dibuat…</string>
    <string name="management_add_item_title">Mau nambahin sesuatu?</string>
    <string name="management_check_report_title">laporan</string>
    <string name="management_check_dish_title">Lihat hidangan</string>
    <string name="management_logout_title">Logout</string>

    <!--  Order  -->
    <string name="order_bill_text">Total Harga</string>
    <string name="order_empty_text">Pesanannya masih kosong nih!\nYuk pesan dulu!</string>
    <string name="order_item_rp_text">Rp.</string>
    <string name="order_table_number_text">Nomor Meja</string>
    <string name="order_table_number_title">Pilih nomor meja:</string>
    <string name="order_item_table_number_title">Meja</string>

    <!--  Order Detail  -->
    <string name="order_detail_payment_hint">Nominal pembayaran</string>
    <string name="order_detail_bill_title">Total harga:</string>
    <string name="order_detail_item_quantity_title">x</string>
    <string name="order_detail_name_title">Nama Menu</string>
    <string name="order_detail_payment_title">Pembayaran:</string>
    <string name="order_detail_price_title">Total Harga Item</string>
    <string name="order_detail_qty_title">Qty</string>

    <!--  Report Detail  -->
    <string name="report_detail_bill_title">Total Harga :</string>
    <string name="report_detail_change_title">Kembali :</string>
    <string name="report_detail_payment_title">Dibayar :</string>
    <string name="report_detail_status_title">Status\t\t\t\t\t:\t</string>
    <string name="report_detail_table_number_title">Nomor meja\t:\t</string>
    <string name="report_item_thumbnail_image">thumbnail pada item laporan</string>
    <string name="report_item_table_number_title">Nomor meja\t:\t</string>
    <string name="report_item_status_title">Status\t\t\t\t\t:\t</string>

    <!--  Splashscreen  -->
    <string name="splashscreen_app_logo_insignia">application logo insignia</string>
    <string name="splashscreen_app_logo_text">application logo text</string>

    <!--  Update Dish  -->
    <string name="update_dish_thumbnail_image">thumbnail pada update hidangan</string>
    <string name="update_drink_menu_image">gambar menu perbarui minuman</string>
    <string name="update_dish_drink_menu_title">Perbarui Minuman</string>
    <string name="update_dish_name_hint">Nama hidangan</string>
    <string name="update_dish_price_hint">Harga hidangan</string>
    <string name="update_dish_stock_quantity_title">Kuantitas:</string>
    <string name="update_dish_menu_image">gambar menu update hidangan</string>
    <string name="update_dish_food_menu_title">Perbarui Makanan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Bottom Navigation Menu  -->
    <string name="bot_nav_menu_dish_title">Hidangan</string>
    <string name="bot_nav_menu_order_title">Pesanan</string>
    <string name="bot_nav_menu_admin_title">Admin</string>


    <!--  ****************************************  -->
</resources>

