<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.management.check.report.detail.CheckReportDetailFragment">

    <TextView
        android:id="@+id/text_report_detail_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="aoignuivnaicvn" />

    <TextView
        android:id="@+id/text_report_detail_timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_report_detail_id"
        tools:text="20/03/2020 20:20" />

    <TextView
        android:id="@+id/title_report_detail_table_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/report_detail_table_number_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_report_detail_timestamp" />

    <TextView
        android:id="@+id/text_report_detail_table_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/title_report_detail_table_number"
        app:layout_constraintStart_toEndOf="@id/title_report_detail_table_number"
        app:layout_constraintTop_toTopOf="@id/title_report_detail_table_number"
        tools:text="2" />

    <TextView
        android:id="@+id/title_report_detail_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/report_detail_status_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_report_detail_table_number" />

    <TextView
        android:id="@+id/text_report_detail_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="@id/title_report_detail_status"
        app:layout_constraintStart_toEndOf="@id/title_report_detail_status"
        app:layout_constraintTop_toTopOf="@id/title_report_detail_status"
        tools:text="Belum Lunas" />

    <TextView
        android:id="@+id/title_report_detail_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/order_detail_qty_title"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_report_detail_status" />

    <TextView
        android:id="@+id/title_report_detail_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/order_detail_name_title"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/title_report_detail_quantity"
        app:layout_constraintEnd_toStartOf="@id/title_report_detail_price"
        app:layout_constraintStart_toEndOf="@id/title_report_detail_quantity"
        app:layout_constraintTop_toTopOf="@id/title_report_detail_quantity" />

    <TextView
        android:id="@+id/title_report_detail_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:text="@string/order_detail_price_title"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/title_report_detail_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title_report_detail_name"
        app:layout_constraintTop_toTopOf="@id/title_report_detail_quantity" />

    <View
        android:id="@+id/div_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/title_report_detail_quantity" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/layout_payment"
        app:layout_constraintTop_toBottomOf="@id/title_report_detail_quantity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_report_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_order_detail" />
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_test"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_report_detail"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <TextView
            android:id="@+id/title_report_detail_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/report_detail_bill_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/text_report_detail_bill"
            app:layout_constraintEnd_toStartOf="@id/guideline_report_detail"
            app:layout_constraintTop_toTopOf="@id/text_report_detail_bill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/order_item_rp_text"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_report_detail_bill"
            app:layout_constraintStart_toEndOf="@id/guideline_report_detail"
            app:layout_constraintTop_toTopOf="@id/text_report_detail_bill" />

        <TextView
            android:id="@+id/text_report_detail_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10000" />

        <TextView
            android:id="@+id/title_report_detail_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/report_detail_payment_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/text_report_detail_payment"
            app:layout_constraintEnd_toStartOf="@id/guideline_report_detail"
            app:layout_constraintTop_toTopOf="@id/text_report_detail_payment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/order_item_rp_text"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_report_detail_payment"
            app:layout_constraintStart_toEndOf="@id/guideline_report_detail"
            app:layout_constraintTop_toTopOf="@id/text_report_detail_payment" />

        <TextView
            android:id="@+id/text_report_detail_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_report_detail_bill"
            tools:text="10000" />

        <TextView
            android:id="@+id/title_report_detail_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/report_detail_change_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/text_report_detail_change"
            app:layout_constraintEnd_toStartOf="@id/guideline_report_detail"
            app:layout_constraintTop_toTopOf="@id/text_report_detail_change" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/order_item_rp_text"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_report_detail_change"
            app:layout_constraintStart_toEndOf="@id/guideline_report_detail"
            app:layout_constraintTop_toTopOf="@id/text_report_detail_change" />

        <TextView
            android:id="@+id/text_report_detail_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_report_detail_payment"
            tools:text="10000" />

        <Button
            android:id="@+id/button_report_detail_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:text="@string/action_print_bill_receipt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_report_detail_change" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>