<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_item_stock_thumbnail"
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/image_dish_item_thumbnail"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_add_dish_placeholder_grey_256dp" />

    <TextView
        android:id="@+id/text_item_stock_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/text_item_stock_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/div_bottom"
        app:layout_constraintTop_toBottomOf="@id/image_item_stock_thumbnail"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/text_item_stock_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/title_item_stock_quantity"
        app:layout_constraintStart_toStartOf="@id/image_item_stock_thumbnail"
        app:layout_constraintTop_toBottomOf="@id/text_item_stock_name"
        tools:text="200000" />

    <TextView
        android:id="@+id/title_item_stock_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_item_stock_title"
        app:layout_constraintBottom_toTopOf="@id/div_bottom"
        app:layout_constraintStart_toStartOf="@id/image_item_stock_thumbnail"
        app:layout_constraintTop_toBottomOf="@id/text_item_stock_price" />

    <TextView
        android:id="@+id/text_item_stock_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/title_item_stock_quantity"
        app:layout_constraintTop_toBottomOf="@id/text_item_stock_price"
        tools:text="100" />

    <Button
        android:id="@+id/button_item_stock_update"
        style="?borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_update"
        app:icon="@drawable/ic_item_stock_update_orange_24dp"
        app:layout_constraintBaseline_toBaselineOf="@id/button_item_stock_delete"
        app:layout_constraintEnd_toStartOf="@id/button_item_stock_delete" />

    <Button
        android:id="@+id/button_item_stock_delete"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_delete"
        android:textColor="@android:color/holo_red_light"
        app:icon="@drawable/ic_item_stock_delete_red_24dp"
        app:iconTint="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="@id/text_item_stock_name"
        app:layout_constraintTop_toBottomOf="@id/text_item_stock_name" />

    <View
        android:id="@+id/div_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_item_stock_quantity" />

</androidx.constraintlayout.widget.ConstraintLayout>